tests/NormalTests/paczka1/small_fuzzy/66002524.err
Error in line 2: U2np0JG4jxr A397 65,1
Error in line 4: U2np0JG4jxr A918 75,0
Error in line 5: A918 A397 61,1
Error in line 15: U2np0JG4jxr A918 48,79
